# PiCarXTalk

./: .gitignore  README.md  README_19v1.md  pyproject.toml  requirements-19v1.txt  setup.sh
example/: 11.video_car.py  12.app_control.py  13.sound_background_music.py  14.voice_promt_car.py  15.storytelling_robot.py  16.voice_controlled_car.py  17.text_vision_talk.py  18.online_llm_test.py  19.local_voice_chatbot.py  19v1.local_voice_chatbot_bilingual_thinking.py  19v2.local_voice_chatbot_interrupt_followup.py  20.treasure_hunt.py  21.voice_active_car_doubao_cn.py  21.voice_active_car_gpt.py  5.cliff_detection.py  6.line_tracking.py  PERFORMANCE_19v1.md  PERFORMANCE_19v2.md  README_19v2.md  lcd_mood_display_1inch69.py  lcd_mood_display_2inch4.py  lcd_pikachu_renderer.py  run_19v1.sh  run_19v2.sh  test_19v1_runtime.py  test_19v2_runtime.py  tts_piper_stream_worker.py  tts_piper_stream_worker_19v2.py  voice_active_car.py
gpt_examples/: README.md  gpt_car.py  openai_helper.py  preset_actions.py
picarx/: led.py  music.py  picarx.py  preset_actions.py  utils.py  version.py
screen/: window.py
